--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
-    "sequelize": "^6.37.7"
+    "prisma": "^6.8.2"
   }
 }
