--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "stock-management",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
