--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "prisma": "npx prisma generate"
+    "prisma": "npx prisma generate",
+    "db": "npx prisma db push"
   },
   "author": "",
   "license": "ISC",
