--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "type": "module",
   "devDependencies": {
     "nodemon": "^3.1.10",
-    "prisma": "^6.9.0"
+    "prisma": "^6.14.0"
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "zod": "^4.0.17"
   }
 }
